--- a/employee/templates/index.html
+++ b/employee/templates/index.html
@@ -16,8 +16,26 @@
 <body>  
   <div class="mobile-container">
     <div class="img">
-      <img src="{% static 'img/smarttick_white.png' %}" alt="smart" style="width: 122px;height: 44px;margin-right: 150px;">
-    </div>         
-  </div>
-</body>
+      <img src="{% static 'img/smarttick_white.png' %}" alt="smart" style="width: 263px;height: 102px;margin-left: 15px;margin-right: 15px;margin-top: 130px;padding-left: 25px;padding-right: 25px;">
+    </div> 
+    <div class="row">
+      <div class="input-field col s6">
+        <label for="email" style="margin-bottom:-20px">Email</label>
+        <input placeholder="" id="email" type="email" name="email" style="border-radius: 25px; border: black;color: white; padding-top: 30px; height: 27px; width: 245px; background-color: #B408B8;margin-left: 40px;">
+      </div>                                                              
+    </div>
+    <div class="row">
+      <div class="input-field col s6">
+        <label for="password">Password</label>
+        <input placeholder="" id="password" type="password" name="password" style="border-radius: 25px; border: black; color: white; padding-top: 30px; height: 27px; width: 245px; background-color: #B408B8;margin-left: 40px;">
+      </div>   
+        <a href="">
+        <p style ="font-size: 14px; font-weight: bold;color: white; margin-left: 170px;"> Forget Password?</p> </a>
+      </div>
+        <button class="btn waves-effect waves-light" type="submit" style=" border-radius: 25px; border: black; height: 27px;
+              width: 132px;background-color: #EA29EE; margin-left: 85px; color: white; font-size: 18px; font-weight: bold;font-family: times new roman;padding-top: 1px;">Login       
+        </button>
+      </div>
+    </div>
+  </body>
 {% endblock %}
