--- a/employee/templates/checkin.html
+++ b/employee/templates/checkin.html
@@ -1,50 +1,40 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block content %} 
-<head>
-    <style>    
-        .mobile-container {
-          max-width: 292px;
-          margin: auto;
-          background-color: #500949;
-          height: 520px;
-          color: white;
-          border-radius: 10px;
-        }
+{% block content %}
+{%block style%}
+<style>
+  .navbar-inverse {
+    background-color: #6d0863;
+    border-color: #6d0863;
+  }
+</style>
+{%endblock%}
 
-        .navbar-inverse{
-          background-color:#6d0863;
-          border-color: #6d0863;
-        }
-      </style>
-    </head>
-    <body>  
-      <div class="mobile-container">
-               <nav class="navbar navbar-inverse">
-            <div class="container-fluid">
-               <div class="navbar-header">
-                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" style=" border-radius: 25px; border:#6d0863;background-color:#6d0863;">
-                   <span class="icon-bar"></span>
-                   <span class="icon-bar"></span>
-                   <span class="icon-bar"></span>                        
-                 </button>
-           
- <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">... <span
-           class="caret"></span></a>
-       <ul class="dropdown-menu">
-         <li><a href="#">Live</a></li>
-         <li><a href="#">Next</a></li>
-         <li><a href="#">Last</a></li>
-       </ul>
-     </li><div class="img">
-          <img src="{% static 'img/smarttick_white.png' %}" alt="smart" style="width: 122px;height: 44px;padding-left: 7px;padding-right: 25px;">
-        </div>
-        
-     </div>
-     </div>
-     </nav>
-   
-        </div>
-    <body>
-</body>
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar"
+        style=" border-radius: 25px; border:#6d0863;background-color:#6d0863;">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+
+      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">... <span
+            class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href="#">Live</a></li>
+          <li><a href="#">Next</a></li>
+          <li><a href="#">Last</a></li>
+        </ul>
+      </li>
+      <div class="img">
+        <img src="{% static 'img/smarttick_white.png' %}" alt="smart"
+          style="width: 122px;height: 44px;padding-left: 7px;padding-right: 25px;">
+      </div>
+    </div>
+  </div>
+</nav>
+
+
 {% endblock %}
