--- a/employee/templates/checkin.html
+++ b/employee/templates/checkin.html
@@ -1,40 +1,62 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block content %}
 {%block style%}
 <style>
+  .logo-class {
+    width: 122px;
+    height: 44px;
+    margin-right: 77px;
+
+  }
+
   .navbar-inverse {
+    border-radius: 5px;
+    background-color: #6d0863;
+    border-color: #6d0863;
+    margin-right: -19px;
+    margin-left: -19px;
+    margin-top: -13px;
+
+
+  }
+
+  .navbar-inverse .navbar-toggle {
     background-color: #6d0863;
     border-color: #6d0863;
   }
+
+  .button.navbar-toggle {
+    background-color: #6d0863;
+  }
+
+  .check-in {
+    text-align: center;
+    margin-top: 50%;
+  }
 </style>
-{%endblock%}
+{% endblock %}
 
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar"
-        style=" border-radius: 25px; border:#6d0863;background-color:#6d0863;">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-
-      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">... <span
-            class="caret"></span></a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Live</a></li>
-          <li><a href="#">Next</a></li>
-          <li><a href="#">Last</a></li>
-        </ul>
-      </li>
-      <div class="img">
-        <img src="{% static 'img/smarttick_white.png' %}" alt="smart"
-          style="width: 122px;height: 44px;padding-left: 7px;padding-right: 25px;">
+<body>
+  {% block content %}
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header" style="width: 107%;">
+        <button type="button" style="display: block;" class="navbar-toggle" data-toggle="collapse"
+          data-target="#myNavbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <div class="img">
+          <img src="{% static 'img/smarttick_white.png' %}" alt="smart" class="logo-class">
+        </div>
       </div>
-    </div>
+  </nav>
+  <div class="check-in">
+    <img src="{% static 'img/tick.svg' %}" alt="smart">
   </div>
-</nav>
+</body>
 
+</html>
 
 {% endblock %}
