--- a/employee/templates/checkin.html
+++ b/employee/templates/checkin.html
@@ -51,12 +51,14 @@
           <img src="{% static 'img/smarttick_white.png' %}" alt="smart" class="logo-class">
         </div>
       </div>
+    </div>
   </nav>
   <div class="check-in">
     <img src="{% static 'img/tick.svg' %}" alt="smart">
   </div>
+  <p style="text-align: center;font-weight: bold; font-size: 23px;"> Succesfully CHECK-IN</p>
+
 </body>
 
 </html>
-
 {% endblock %}
