--- a/employee/templates/common/base.html
+++ b/employee/templates/common/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -29,9 +30,9 @@
 </head>
 
 <body>
+  <a href="{% url 'account_logout' %}">logout</a>
   <div class="mobile-container">
     {%block content%}
-
     {% endblock %}
   </div>
   <!-- script block start -->
