--- a/employee/templates/common/attendance.html
+++ b/employee/templates/common/attendance.html
@@ -28,31 +28,35 @@
     .button.navbar-toggle {
         background-color: #6d0863;
     }
-
-    /*.attendance-class {
-        height: 39px;
-        width: 50px;
+     .hr {
+        margin: 44px;
     }
-
-    .add-class {
-        height: 68px;
-        width: 50px;
-    }
-
-    .delete-class {
-        height: 39px;
-        width: 50px;
-    }
-
-    .update-class {
-        height: 39px;
-        width: 50px;
-    }
-*/
     .employee-profile {
         text-align: center;
         margin-top: 16px;
     }
+    .h5,h5{
+        font-weight: bold;
+        text-align: center;
+        padding-left: 6px;
+        padding-top: 15px;
+    }
+    .table {
+        margin-top: 45px;
+        }
+    .table, th, td {
+    border: 1px solid white;
+    border-collapse: collapse;
+}
+    .th, td {
+    padding: 15px;
+    text-align: center;
+}
+    .col {
+  float: left;
+  padding: 10px;
+}
+
 </style>
 {% endblock %}
 
@@ -73,7 +77,15 @@
             </div>
         </div>
     </nav>
-
+    <div class="row">
+        <div class="col">
+            <div class="img">
+                <img src="{% static 'img/attendance.png' %}" alt="smart" style="height: 79px; width: 99px;">
+        </div>
+    </div>
+        <div class="col"><h5>EMPLOYEE NAME</h5>
+    </div>
+</div>
 </body>
 
 {% endblock %}
