--- a/employee/templates/common/checkin.html
+++ b/employee/templates/common/checkin.html
@@ -3,62 +3,70 @@
 {%block style%}
 
 <style>
-  .logo-class {
-    width: 122px;
-    height: 44px;
-    margin-right: 77px;
 
-  }
-
-
-  .check-in {
+.check-in {
     text-align: center;
     margin-top: 50%;
   }
-
   .navbar-inverse {
-    border-radius: 5px;
+    border-top-right-radius: 21px;
+    border-top-left-radius: 21px;
     background-color: #6d0863;
     border-color: #6d0863;
-    margin-right: -19px;
-    margin-left: -19px;
-    margin-top: -13px;
+    margin-right: -26px;
+    margin-left: -26px;
+    margin-top: -26px;
+    }
+    .logo-class {
+        width: 122px;
+        height: 44px;
+        margin-top:-60px;
 
+    }
 
-  }
+    .navbar-inverse .navbar-toggle {
+        background-color: #6d0863;
+        border-color: #6d0863;
+    }
 
-  .navbar-inverse .navbar-toggle {
-    background-color: #6d0863;
-    border-color: #6d0863;
-  }
+    .button.navbar-toggle {
+        background-color: #6d0863;
+    }
+   
+    .test:after {
+  content: '\2807';
+  font-size: 2em;
+  color: whitesmoke;
+  padding-left:230px;
+}
 
-  .button.navbar-toggle {
-    background-color: #6d0863;
-  }
+h3 {
+  text-align: center;
+  font-weight: bold;
+}
 </style>
 {% endblock %}
 
 <body>
-  {% block content %}
-  <nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-      <div class="navbar-header" style="width: 107%;">
-        <button type="button" style="display: block;" class="navbar-toggle" data-toggle="collapse"
-          data-target="#myNavbar">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <div class="img">
-          <img src="{% static 'img/smarttick_white.png' %}" alt="smart" class="logo-class">
+    {% block content %}
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+            <div class = "navbar-brand"> 
+            <div class="test">
+            </div>
+                <div class = "img">
+                    <img src="{% static 'img/smarttick_white.png' %}" alt="smart" class="logo-class">
+                </div>  
+            </div> 
         </div>
-      </div>
     </div>
-  </nav>
+</nav>  
+
 
   <div class="check-in">
     <img src="{% static 'img/tick.svg' %}" alt="smart">
   </div>
-  <p style="text-align: center;font-weight: bold; font-size: 23px;"> Succesfully CHECK-IN</p>
+  <h3 > Succesfully CHECK-IN</h3>
 
   {% endblock %}
