--- a/employee/templates/common/checkout.html
+++ b/employee/templates/common/checkout.html
@@ -2,21 +2,19 @@
 {% load static %}
 {%block style%}
 <style>
+    .navbar-inverse {
+    border-top-right-radius: 21px;
+    border-top-left-radius: 21px;
+    background-color: #6d0863;
+    border-color: #6d0863;
+    margin-right: -26px;
+    margin-left: -26px;
+    margin-top: -26px;
+    }
     .logo-class {
         width: 122px;
         height: 44px;
-        margin-right: 77px;
-
-    }
-
-    .navbar-inverse {
-        border-radius: 5px;
-        background-color: #6d0863;
-        border-color: #6d0863;
-        margin-right: -19px;
-        margin-left: -19px;
-        margin-top: -13px;
-
+        margin-top:-60px;
 
     }
 
@@ -28,11 +26,23 @@
     .button.navbar-toggle {
         background-color: #6d0863;
     }
+   
+    .test:after {
+  content: '\2807';
+  font-size: 2em;
+  color: whitesmoke;
+  padding-left:230px;
+}
+.check-out {
+    text-align: center;
+    margin-top: 50%;
+  }
 
-    .check-out {
+  .h4, h4 {
         text-align: center;
-        margin-top: 50%;
+        font-weight: bold;
     }
+
 </style>
 {% endblock %}
 
@@ -40,23 +50,21 @@
     {% block content %}
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
-            <div class="navbar-header" style="width: 107%;">
-                <button type="button" style="display: block;" class="navbar-toggle" data-toggle="collapse"
-                    data-target="#myNavbar">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <div class="img">
-                    <img src="{% static 'img/smarttick_white.png' %}" alt="smart" class="logo-class">
-                </div>
+            <div class="navbar-header">
+            <div class = "navbar-brand"> 
+            <div class="test">
             </div>
+                <div class = "img">
+                    <img src="{% static 'img/smarttick_white.png' %}" alt="smart" class="logo-class">
+                </div>  
+            </div> 
         </div>
-    </nav>
+    </div>
+</nav>
     <div class="check-out">
         <img src="{% static 'img/tick.svg' %}" alt="smart">
     </div>
-    <p style="text-align: center;font-weight: bold;font-size: 23px;"> Click here to CHECKOUT</p>
+    <h4 >  Click here to CHECKOUT</h4>
 </body>
 
 {% endblock %}
