--- a/employee/templates/common/employee_profile.html
+++ b/employee/templates/common/employee_profile.html
@@ -2,32 +2,38 @@
 {% load static %}
 {%block style%}
 <style>
-    .logo-class {
-        width: 122px;
-        height: 44px;
-        margin-right: 77px;
-
-    }
-
     .navbar-inverse {
-        border-radius: 5px;
+        border-top-right-radius: 21px;
+        border-top-left-radius: 21px;
         background-color: #6d0863;
         border-color: #6d0863;
-        margin-right: -19px;
-        margin-left: -19px;
-        margin-top: -13px;
-
-
+        margin-right: -26px;
+        margin-left: -26px;
+        margin-top: -26px;
+        }
+        .logo-class {
+            width: 122px;
+            height: 44px;
+            margin-top:-60px;
+    
+        }
+    
+        .navbar-inverse .navbar-toggle {
+            background-color: #6d0863;
+            border-color: #6d0863;
+        }
+    
+        .button.navbar-toggle {
+            background-color: #6d0863;
+        }
+       
+        .test:after {
+      content: '\2807';
+      font-size: 2em;
+      color: whitesmoke;
+      padding-left:230px;
     }
 
-    .navbar-inverse .navbar-toggle {
-        background-color: #6d0863;
-        border-color: #6d0863;
-    }
-
-    .button.navbar-toggle {
-        background-color: #6d0863;
-    }
 
     .employee-profile {
         text-align: center;
@@ -41,26 +47,25 @@
         text-align: center;
         font-weight: bold;
     }
-</style>
-{% endblock %}
-
-<body>
-    {% block content %}
-    <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-            <div class="navbar-header" style="width: 107%;">
-                <button type="button" style="display: block;" class="navbar-toggle" data-toggle="collapse"
-                    data-target="#myNavbar">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <div class="img">
-                    <img src="{% static 'img/smarttick_white.png' %}" alt="smart" class="logo-class">
+    </style>
+    {% endblock %}
+    
+    <body>
+        {% block content %}
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                <div class = "navbar-brand"> 
+                <div class="test">
                 </div>
+                    <div class = "img">
+                        <img src="{% static 'img/smarttick_white.png' %}" alt="smart" class="logo-class">
+                    </div>  
+                </div> 
             </div>
         </div>
-    </nav>
+    </nav>     
+
     <div class="employee-profile">
         <img src="{% static 'img/user.png' %}" alt="smart">
     </div>
@@ -72,7 +77,6 @@
     <hr>
     <h3>ADDRESS</p>
     <hr>
-
 
 </body>
 
