--- a/employee/templates/common/base.html
+++ b/employee/templates/common/base.html
@@ -31,8 +31,12 @@
 
 <body>
   <a href="{% url 'account_logout' %}">logout</a>
+  <a href="/attendance/">attendence</a>
+  <a href="/employee_profile/">profile</a>
+
   <div class="mobile-container">
     {%block content%}
+
     {% endblock %}
   </div>
   <!-- script block start -->
