--- a/employee/templates/common/attendance.html
+++ b/employee/templates/common/attendance.html
@@ -2,20 +2,20 @@
 {% load static %}
 {%block style%}
 <style>
-
-.navbar-inverse {
-    border-top-right-radius: 21px;
-    border-top-left-radius: 21px;
-    background-color: #6d0863;
-    border-color: #6d0863;
-    margin-right: -26px;
-    margin-left: -26px;
-    margin-top: -26px;
+    .navbar-inverse {
+        border-top-right-radius: 21px;
+        border-top-left-radius: 21px;
+        background-color: #6d0863;
+        border-color: #6d0863;
+        margin-right: -26px;
+        margin-left: -26px;
+        margin-top: -26px;
     }
+
     .logo-class {
         width: 122px;
         height: 44px;
-        margin-top:-60px;
+        margin-top: -60px;
 
     }
 
@@ -27,15 +27,16 @@
     .button.navbar-toggle {
         background-color: #6d0863;
     }
-   
-    .test:after {
-  content: '\2807';
-  font-size: 2em;
-  color: whitesmoke;
-  padding-left:230px;
-}
 
-    .h4,h4{
+    .test:after {
+        content: '\2807';
+        font-size: 2em;
+        color: whitesmoke;
+        padding-left: 230px;
+    }
+
+    .h4,
+    h4 {
         font-weight: bold;
         text-align: center;
         height: 27px;
@@ -46,10 +47,11 @@
     }
 
     .col {
-  float: left;
-  padding: 10px;
-}
-/*.header{
+        float: left;
+        padding: 10px;
+    }
+
+    /*.header{
     
     border-top: 5px solid black;
     border-bottom: 5px solid black;
@@ -63,57 +65,61 @@
     margin-left: -16px;
 }
 */
-table.scrolldown { 
-    width: 273px;
-    margin-left: -16px;
-			/* border-collapse: collapse; */ 
-			border-spacing: 0; 
-			border: 2px solid white;
-            border-top-width: thin; 
-            border-left-color: transparent;
-    border-right-color: transparent;
-    border-bottom-color:transparent;
-		} 
-		
-		/* To display the block as level element */ 
-		table.scrolldown tbody, table.scrolldown thead { 
-			display: block; 
-		} 
-		
-		thead tr th { 
-			height: 40px; 
-			line-height: 40px; 
-		} 
-		
-		table.scrolldown tbody { 
-			
-			/* Set the height of table body */ 
-			height: 276px; 
-			
-			/* Set vertical scroll */ 
-			overflow-y: auto; 
-			
-			/* Hide the horizontal scroll */ 
-			overflow-x: hidden; 
-		} 
-		
-		tbody { 
-			border-top: 2px solid white;
-            border-top-width: thin;
-            padding: 18px;
-        
-		} 
-		
-		tbody td, thead th { 
-			width : 200px; 
-			
-		} 
-		td { 
-			text-align:center; 
-		}
-        th { 
-			text-align:center; 
-		}  
+    table.scrolldown {
+        width: 273px;
+        margin-left: -16px;
+        /* border-collapse: collapse; */
+        border-spacing: 0;
+        border: 2px solid white;
+        border-top-width: thin;
+        border-left-color: transparent;
+        border-right-color: transparent;
+        border-bottom-color: transparent;
+    }
+
+    /* To display the block as level element */
+    table.scrolldown tbody,
+    table.scrolldown thead {
+        display: block;
+    }
+
+    thead tr th {
+        height: 40px;
+        line-height: 40px;
+    }
+
+    table.scrolldown tbody {
+
+        /* Set the height of table body */
+        height: 276px;
+
+        /* Set vertical scroll */
+        overflow-y: auto;
+
+        /* Hide the horizontal scroll */
+        overflow-x: hidden;
+    }
+
+    tbody {
+        border-top: 2px solid white;
+        border-top-width: thin;
+        padding: 18px;
+
+    }
+
+    tbody td,
+    thead th {
+        width: 200px;
+
+    }
+
+    td {
+        text-align: center;
+    }
+
+    th {
+        text-align: center;
+    }
 </style>
 {% endblock %}
 
@@ -122,87 +128,43 @@ table.scrolldown {
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
-            <div class = "navbar-brand"> 
-            <div class="test">
+                <div class="navbar-brand">
+                    <div class="test">
+                    </div>
+                    <div class="img">
+                        <img src="{% static 'img/smarttick_white.png' %}" alt="smart" class="logo-class">
+                    </div>
+                </div>
             </div>
-                <div class = "img">
-                    <img src="{% static 'img/smarttick_white.png' %}" alt="smart" class="logo-class">
-                </div>  
-            </div> 
         </div>
-    </div>
-</nav>        
+    </nav>
     <div class="row">
         <div class="col">
             <div class="img">
-                <img src="{% static 'img/attendance.png' %}" alt="smart" style="height: 49px; width: 52px; margin-top:-20px;">
+                <img src="{% static 'img/attendance.png' %}" alt="smart"
+                    style="height: 49px; width: 52px; margin-top:-20px;">
+            </div>
+        </div>
+        <div class="col">
+            <h4>{{user}}</h4>
         </div>
     </div>
-        <div class="col"><h4>Ritu Bind</h4>
-    </div>
-</div>
-<table class="scrolldown"> 
-		
-    <!-- Table head content -->
-    <thead> 
-        <tr> 
-            <th>Date</th> 
-            <th>Status</th> 
-             
-        </tr> 
-    </thead> 
-    
-    <!-- Table body content -->
-    <tbody> 
-        <tr> 
-            <td>10-12-2012</td> 
-            <td>Full Day</td> 
-            
-        </tr> 
-        
-        <tr> 
-            <td>10-12-2012</td> 
-            <td>Half Day</td> 
-        </tr> 
-        <tr> 
-            <td>10-12-2012</td> 
-            <td>Full Day</td> 
-        </tr> 
-        <tr> 
-            <td>10-12-2012</td> 
-            <td>Half Day</td> 
-        </tr> 
-        <tr> 
-            <td>10-12-2012</td> 
-            <td>Full Day</td> 
-        </tr> 
-        <tr> 
-            <td>10-12-2012</td> 
-            <td>Half Day</td> 
-        </tr> 
-        <tr> 
-            <td>10-12-2012</td> 
-            <td>Full Day</td> 
-        </tr> 
-        <tr> 
-            <td>10-12-2012</td> 
-            <td>Full Day</td> 
-        </tr>  <tr> 
-            <td>10-12-2012</td> 
-            <td>Full Day</td> 
-        </tr>  <tr> 
-            <td>10-12-2012</td> 
-            <td>Full Day</td> 
-        </tr>  <tr> 
-            <td>10-12-2012</td> 
-            <td>Full Day</td> 
-        </tr>
-        <tr> 
-            <td>10-12-2012</td> 
-            <td>Half Day</td> 
-        </tr> 
-    </tbody> 
-</table> 
+    <table class="scrolldown">
+
+        <!-- Table head content -->
+        <thead>
+            <tr>
+                <th>Date</th>
+                <th>Status</th>
+
+            </tr>
+        </thead>
+
+        <!-- Table body content -->
+        <tbody id="table_data">
+
+        </tbody>
+    </table>
 
 </body>
 
@@ -212,11 +174,19 @@ table.scrolldown {
 {%block script%}
 <script>
     $.ajax({
-        type: 'get', 
+        type: 'get',
         url: '/attendance_api/',
-          success: function (response) {
-                console.log(response)
+        success: function (response) {
+            for (var i = 0; i <= response.length - 1; i++) {
+                console.log(response[i]);
+                var data = $("<tr>\
+                    <td>" + response[i].check_in + "</td>\
+                    <td>" + response[i].status + "</td>\
+                </tr> ");
+                $('#table_data').append(data);
+
             }
-        });
-    </script>
-    {% endblock %}
+        }
+    });
+</script>
+{% endblock %}
